<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/appbar_padding_top"
        tools:context=".AddItemActivity">

        <TextView
            android:id="@+id/item_info_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/appbar_padding_top"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/fab_margin"
            android:text="@string/item_details_header"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_header" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/item_imageView"
                android:layout_width="0dp"
                android:layout_height="@dimen/item_image_side_big"
                android:layout_weight="1"
                android:contentDescription="@string/content_description_item_image_will_be_here"
                android:src="@android:drawable/ic_menu_gallery" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/fab_margin"
            android:paddingRight="@dimen/fab_margin"
            android:weightSum="8">

            <TextView
                android:id="@+id/item_url_headline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/item_url"
                android:textSize="@dimen/text_size"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/url_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/hint_insert_here_item_url"
                android:inputType="textUri"
                android:textSize="@dimen/text_size" />

            <Button
                android:id="@+id/submit_url_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/submit_url_button"
                android:textAlignment="center"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/fab_margin"
            android:paddingRight="@dimen/fab_margin"
            android:weightSum="8">

            <TextView
                android:id="@+id/item_name_headline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/item_name"
                android:textSize="@dimen/text_size"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/item_name_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:enabled="false"
                android:focusable="false"
                android:hint="@string/hint_insert_here_item_name"
                android:inputType="text"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/fab_margin"
            android:paddingRight="@dimen/fab_margin"
            android:weightSum="8">

            <TextView
                android:id="@+id/item_price_headline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/item_price"
                android:textSize="@dimen/text_size"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/item_price_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:enabled="false"
                android:focusable="false"
                android:hint="@string/hint_insert_here_item_price"
                android:inputType="number|numberDecimal"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <TextView
            android:id="@+id/alarm_settings_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/fab_margin"
            android:text="@string/alarm_settings_header"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_header" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/fab_margin"
            android:paddingRight="@dimen/fab_margin"
            android:weightSum="4">

            <Switch
                android:id="@+id/switch_alarm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/text_alarm_on_off"
                android:textSize="@dimen/text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/fab_margin"
            android:paddingRight="@dimen/fab_margin"
            android:weightSum="4">

            <TextView
                android:id="@+id/radio_group_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/radio_group_header_text"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/alarm_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/fab_margin"
            android:paddingRight="@dimen/fab_margin">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/percent5" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/percent10" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/percent15" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/percent20" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">

            <Button
                android:id="@+id/save_item_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_item_button"
                android:textAlignment="center"
                android:textStyle="normal" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>